grid size stop overflow

--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,10 @@ li {
     width: 4rem;
 }
 
+.pie__name {
+    max-width: 9rem;
+}
+
 .pie__image {
     width: 50px;
 }
@@ -201,7 +205,7 @@ details > summary {
     .podium,
     .wooden-spoon {
         grid-template-columns: repeat(3, minmax(0, 1fr));
-        grid-auto-rows: 10rem;
+        grid-auto-rows: 12rem;
     }
 
     .wooden-spoon .pie__wrapper {
